@@ -1,15 +1,12 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST statsample-1.1.0.gem 266752 RMD160 13568e4f93553094a9d2c8bed728e678fde1805e SHA1 102954036d365964be8b2e72589384db2359fdfa SHA256 b98218a3f09ea527ea5e80f384faa24c0dcf0664711e3bc28871a1c4701e2739
-EBUILD statsample-1.1.0-r1.ebuild 1643 RMD160 6f8e240b1dc0182cf39b37d33153fa8708f2872e SHA1 f814a10d416d809fb738b16622f0aeb71493cf19 SHA256 3b69e77a365347dcf6b6a82887644af565aa34b7bc16f5e6cf1adee44e49f229
-EBUILD statsample-1.1.0.ebuild 1605 RMD160 9e603d382820667323913b84667965120d248488 SHA1 e159dbf97fb34f45eba4b04082afd63c81682b02 SHA256 ae87905cfd337dcb93cbe9e00a4112411b738cc0fcc1c6784b873c924a5f6d0a
-MISC ChangeLog 530 RMD160 d0313cd45660e662119156c8bf65ee9d25688f08 SHA1 d7c6ce158a5aadd837dd5229dbb278afc18cfeaa SHA256 a5f8e2b30cd17eaafa35cab3df4c66ca9bbd8453a6a6625b5b4a820ba6bc4b39
-MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
+DIST statsample-1.1.0.gem 266752 SHA256 b98218a3f09ea527ea5e80f384faa24c0dcf0664711e3bc28871a1c4701e2739 SHA512 3e8b76cefd1537a018be8a999b542e63572b71a6650767318b129b834726fc53220ceae461ff53207b254d88c9dc43d5672b1cbfea17d9ced34ca0e6254a4a93 WHIRLPOOL 3cfda5e795be043f22600f3c4654c43a60e97d9d5532b229d5377a10364e30fff7936166879666020a24331bdfaa4586a650d8af2f7eebd5759b666942e09ede
+DIST statsample-1.2.0.gem 273920 SHA256 9e3f79632468ab62dec7a560c9406c9a7a68ce80b2b7808ff71dfba9bd4d3218 SHA512 31497abe20fb7ac1a21a1d99e1a992bfd993332710867ef37d3e21c8d5a63aa09653958ccc3295cda3db851b6d21af77391476dfa7dc146590c93b07c2240727 WHIRLPOOL 0628cb8caa91e1e27f50660a111eedb5af56d4b216aaf4805bcf651d63cd6cd32ae76a4069fadef6046f3513e30ae7576d5172035ae55830ce4ff8151fbffb39
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAk6gHXQACgkQiIP6VqMIqNc3fgD/atMEAvHhHOYUij6CWK60Tt1B
-vj6ekSuFWEAOZYQwrL0A+wY4kwHqS/FgOlotW/v5W4dy7a3SkxhTArsQIQJlTkzh
-=Wud9
+iF4EAREIAAYFAlBlbTUACgkQiIP6VqMIqNfxUQD+IBvupnthO9bZ8ascDrJcwb2z
+tVmiRz2qiqOTnEPdbtAA/2WrJuCNj45QRltN/zLPZaz+Xv7DL5LO/tylhy3fVPpG
+=razD
 -----END PGP SIGNATURE-----
