@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/statsample
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*statsample-1.2.0 (28 Sep 2012)
+
+  28 Sep 2012; Hans de Graaff <graaff@gentoo.org> +statsample-1.2.0.ebuild:
+  Version bump with same hacked gemspec. Add ruby19.
 
 *statsample-1.1.0-r1 (20 Oct 2011)
 
